fix pass <p> overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -105,11 +105,13 @@ input[type="checkbox"] {
 
 .pass-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 50% 50%;
   gap: 1rem;
   padding-top: 1rem;
   p {
     animation: fadeIn 0.5s ease-out;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
     padding: 1rem;
     background: #D1D5DB;
     margin: 0;
